feat: add change

--- a/museum-adaptive/style/style.scss
+++ b/museum-adaptive/style/style.scss
@@ -2850,6 +2850,12 @@ footer {
         margin: 29px auto;
         bottom: 0;
     }
+
+    .vidio-journey {
+        .wrapper {
+            display: block;
+        }
+    }
 }
 
 @media (max-width: 768px) {
