--- a/museum-adaptive/style/style.css
+++ b/museum-adaptive/style/style.css
@@ -3238,6 +3238,9 @@ footer {
     margin: 29px auto;
     bottom: 0;
   }
+  .vidio-journey .wrapper {
+    display: block;
+  }
 }
 
 @media (max-width: 768px) {
