--- a/museum-dom/style/style.scss
+++ b/museum-dom/style/style.scss
@@ -599,9 +599,15 @@ header {
 
 /*Vidio journey*/
 
-.vidio-journey {
-    background: $color2;
-}
+// .vidio-journey {
+//     background: $color2;
+//     .wrapper {
+//         .video-wrapper {
+//             width: 100%;
+//         }
+//     }
+    
+// }
 
 .text-container {
     padding: 75px 0;
@@ -630,6 +636,8 @@ header {
     }
 }
 
+
+
 .vidio-container {
     position: relative;
     height: 100%;
@@ -637,7 +645,7 @@ header {
     padding-bottom: 40px;
     video {
         width: 100%;
-        height: 100%;
+        height: auto;
     }
     .video-start {
         position: absolute;
@@ -681,6 +689,7 @@ header {
             height: auto;
             margin: 0 50px 0 30px;
             img{
+                display: none;
                 width: 100%;
                 height: auto;
                 transition: 0.5s;
@@ -688,19 +697,19 @@ header {
             img:hover {
                 filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
             }
+            .current {
+                display: block;
+            }
         }
         .move-line {
-            background: linear-gradient(to right, $color6 0%, $color6 53.49%, #C4C4C4 53.49%, #C4C4C4 100%);
             height: 8px;
-            width: 64.51%;
+            width: 69.72%;
+            margin-right: 50px;
+            background: linear-gradient(to right, $color6 0%, $color6 53.5%, #C4C4C4 53.5%, #C4C4C4 100%);
             outline: none;
             transition: background 450ms ease-in;
             -webkit-appearance: none;
-            margin-right: 50px;
         }
-        .move-line__adaptive-1024, 
-        .move-line__adaptive-420, 
-        .move-line__adaptive-768 {display: none;}
         
         .move-line::-webkit-slider-thumb {
             max-width: 15px;
@@ -716,6 +725,7 @@ header {
             height: auto;
             margin-right: 50px;
             img {
+                display: none;
                 width: 100%;
                 height: auto;
                 transition: 0.5s;
@@ -723,17 +733,19 @@ header {
             img:hover {
                 filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
             }
+            .current-volume {
+                display: block;
+            }
         }
         .volume-line {
-            background: linear-gradient(to right, $color6 0%, $color6 43%, #C4C4C4 43%, #C4C4C4 100%);
             height: 8px;
-            width: 10.76%;
+            width: 12.24%;
+            margin-right: 50px;
+            background: linear-gradient(to right, $color6 0%, $color6 43%, #C4C4C4 43%, #C4C4C4 100%);
             outline: none;
             transition: background 450ms ease-in;
             -webkit-appearance: none;
-            margin-right: 50px;
         }
-        .volume-line__adaptive-768 {display: none;}
         
         .volume-line::-webkit-slider-thumb {
             width: 15px;
@@ -749,6 +761,7 @@ header {
             height: auto;
             margin-right: 25px;
             img {
+                display: none;
                 width: 100%;
                 height: auto;
                 transition: 0.5s;
@@ -756,9 +769,27 @@ header {
             img:hover {
                 filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
             }
+            .fullscreen__exit {
+                display: block;
+            }
         }
     }
+    .adjustment__full {
+        position: absolute;
+        bottom: 0;
+    }
 }
+
+// .vidio-journey__wrapper {
+//     width: 100vw;
+//     height: 100vh;
+//     background-color: khaki;
+//     position: relative;
+// }
+
+// .wrapper {
+
+// }
 
 .video-slider {
     height: auto;
@@ -1077,11 +1108,11 @@ header {
         .total {
             padding-bottom: 35px;
             padding-top: 40px;
-            padding-left: 25px;
+            padding-left: 0px;
             h4 {
                 span {
                     font-family: $font-roboto-bold;
-                    font-size: 28px;
+                    font-size: 27px;
                     line-height: 33px;
                     letter-spacing: 1.65px;
                     color: $color4;
@@ -1745,10 +1776,12 @@ header {
 
 .contacts-container {
     padding-bottom: 75px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 282px 1fr;
+    grid-template-rows: auto;
+    column-gap: 198px;
     justify-content: space-between;
     .contacts-content {
-        max-width: 282px;
         .contacts-content__title {
             font-family: $font-roboto-medium;
             font-size: 28px;
@@ -1770,17 +1803,17 @@ header {
             padding: 0;
         }
     }
-    .contacts-map {
-        max-width: 960px;
-        img {
+    .map-container {
+        position: relative;
+        padding-top: 64.59%;
+        .contacts-map {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
             width: 100%;
-            height: auto;
+            height: 100%;
         }
-    }
-    .map-2,
-    .map-3,
-    .map-4 {
-        display: none;
     }
 }
 
@@ -2339,20 +2372,14 @@ footer {
                 margin: 0 30px 0 40px;
             }
             .move-line {
-                display: none;
-            }
-
-            .move-line__adaptive-1024 {
                 display: block;
-                background: linear-gradient(to right, $color6 0%, $color6 40%, #C4C4C4 40%, #C4C4C4 100%);
                 height: 5px;
                 margin-right: 30px;
                 width: 57.31%;
-                outline: none;
-                transition: background 450ms ease-in;
-                -webkit-appearance: none;
+
             }
-            .move-line__adaptive::-webkit-slider-thumb {
+
+            .move-line::-webkit-slider-thumb {
                 max-width: 13px;
                 height: 13px;
                 border-radius: 50%;
@@ -2499,6 +2526,7 @@ footer {
     }
 
     .contacts-container {
+        column-gap: 62px;
         padding-bottom: 62px;
         .contacts-content {
             .contacts-content__title {
@@ -2511,15 +2539,6 @@ footer {
                 line-height: 23px;
                 padding-bottom: 15px;
             }
-        }
-        .contacts-map {
-            max-width: 694px;
-        }
-        .map-2 {
-            display: block;
-        }
-        .map-1 {
-            display: none;
         }
     }
 
@@ -2729,34 +2748,36 @@ footer {
         }
     }
 
-    .wrapper {
-        display: flex;
-        margin: 0;
-        justify-content: center;
-        grid-area: louvre-container;
-        padding: 0 20px;
-        .wrapper-container {
-            width: auto;
-            .louvre-container {
-                padding: 0 0 50px 0;
-                .louvre-title {
-                    width: 332px;
-                    font-size: 40px;
-                    line-height: 60px;
-                    text-align: center;
-                    margin: 0 auto;
-                }
-                .louvre-subtitle {
-                    font-size: 20px;
-                    line-height: 23.44px;
-                    width: 332px;
-                    padding: 0;
-                    padding-top: 25px;
-                    margin: 0 auto;
-                }
-                form {
-                    .louvre-button {
-                        display: none;
+    .welcom-louvre {
+        .wrapper {
+            display: flex;
+            margin: 0;
+            justify-content: center;
+            grid-area: louvre-container;
+            padding: 0 20px;
+            .wrapper-container {
+                width: auto;
+                .louvre-container {
+                    padding: 0 0 50px 0;
+                    .louvre-title {
+                        width: 332px;
+                        font-size: 40px;
+                        line-height: 60px;
+                        text-align: center;
+                        margin: 0 auto;
+                    }
+                    .louvre-subtitle {
+                        font-size: 20px;
+                        line-height: 23.44px;
+                        width: 332px;
+                        padding: 0;
+                        padding-top: 25px;
+                        margin: 0 auto;
+                    }
+                    form {
+                        .louvre-button {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -3063,32 +3084,21 @@ footer {
                 width: 27px;
                 margin-right: 35px;
             }
-            .move-line__adaptive-1024 {
-                display: none;
-            }
-            .move-line__adaptive-768 {
+
+            .move-line {
                 position: absolute;
                 display: block;
                 top: -3px;
                 width: 100%;
                 height: 5px;
-                background: linear-gradient(to right, $color6 0%, $color6 31%, #C4C4C4 31%, #C4C4C4 100%);
-                outline: none;
-                transition: background 450ms ease-in;
-                -webkit-appearance: none;
             }
-            .volume-line {display: none;}
-            .volume-line__adaptive-768 {
+            .volume-line {
                 display: block;
                 position: absolute;
                 top: 48%;
                 left: 150px;
                 width: calc(100% - 242px);
                 height: 5px;
-                background: linear-gradient(to right, $color6 0%, $color6 40%, #C4C4C4 43%, #C4C4C4 100%);
-                outline: none;
-                transition: background 450ms ease-in;
-                -webkit-appearance: none;
             }
             .full {
                 position: absolute;
@@ -3546,19 +3556,14 @@ footer {
                 width: 18px;
                 margin-right: 30px;
             }
-            .move-line__adaptive-768 {display: none;}
-            .move-line__adaptive-420 {
+            .move-line {
                 position: absolute;
                 display: block;
                 top: -4px;
                 height: 4px;
                 width: 100%;
-                background: linear-gradient(to right, $color6 0%, $color6 40%, #C4C4C4 31%, #C4C4C4 100%);
-                outline: none;
-                transition: background 450ms ease-in;
-                -webkit-appearance: none;
             }
-            .move-line__adaptive-420::-webkit-slider-thumb {
+            .move-line::-webkit-slider-thumb {
                 max-width: 10px;
                 height: 10px;
                 border-radius: 50%;
@@ -3566,20 +3571,15 @@ footer {
                 cursor: pointer;
                 background: $color2;
             }
-            .volume-line {display: none;}
-            .volume-line__adaptive-768 {
+            .volume-line {
                 display: block;
                 position: absolute;
                 top: 45.5%;
                 left: 112px;
                 width: calc(100% - 180px);
                 height: 5px;
-                background: linear-gradient(to right, $color6 0%, $color6 40%, #C4C4C4 43%, #C4C4C4 100%);
-                outline: none;
-                transition: background 450ms ease-in;
-                -webkit-appearance: none;
             }
-            .volume-line__adaptive-768::-webkit-slider-thumb {
+            .volume-line::-webkit-slider-thumb {
                 width: 10px;
                 height: 10px;
                 border-radius: 50%;
