--- a/museum-dom/style/style.scss
+++ b/museum-dom/style/style.scss
@@ -901,6 +901,15 @@ header {
             padding-bottom: 24px;
             width: 100%;
             height: auto;
+            transform: translate(0, 15%);
+            opacity: 0;
+            transform: scale(0.8);
+            transition: all 0.8s;
+        }
+        .image-active {
+            transform: translate(0, 0);
+            // transform: scale(1.0);
+            opacity: 1;
         }
         img:nth-child(1) {
             padding-top: 50px;
