--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -35,12 +35,36 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 120px;
+  width: 350px;
   margin-bottom: 28px;
 }
 
 .play-list {
+  position: relative;
+  z-index: 10;
   text-align: left;
+  height: 140px;
+  overflow: hidden;
+  padding: 15px;
+}
+
+.play-list:hover {
+  overflow: auto;
+  box-shadow: 0px 0px 25px 2px rgba(0, 141, 249, 0.25) inset;
+}
+
+.play-list:hover::-webkit-scrollbar {
+  background-color: rgba(25, 25, 78, 20%);
+  width: 7px;
+}
+.play-list:hover::-webkit-scrollbar-button {
+  background-color: rgba(18, 18, 68, 0.2);
+  height: 0;
+}
+
+.play-list:hover::-webkit-scrollbar-thumb {
+  background-color: rgb(16, 16, 66);
+  border-radius: 3px;
 }
 
 .play-item {
@@ -67,6 +91,27 @@ body {
 
 .item-active::before {
   color: #C5B358;
+}
+
+.audio-line {
+  height: 8px;
+  width: 150px;
+  margin-left: 20px;
+  background: linear-gradient(to right, rgb(169 18 18) 25%, rgb(169 18 18) 25%, rgb(196, 196, 196) 0%, rgb(196, 196, 196) 100%);
+  outline: none;
+  transition: background 450ms ease-in;
+  -webkit-appearance: none;
+  cursor: pointer;
+}
+
+.audio-line::-webkit-slider-thumb {
+  opacity: 0;
+  max-width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  cursor: pointer;
+  background: #C4C4C4;
 }
 
 .player-icon,
@@ -118,6 +163,10 @@ body {
   background-image: url("../assets/svg/play-next.svg");
 }
 
+.audio-time {
+  margin-left: 20px;
+}
+
 .weather {
   display: flex;
   flex-direction: column;
@@ -131,6 +180,47 @@ body {
 
 .weather-error {
   margin-top: -10px;
+}
+
+.track-list {
+  position: relative;
+  list-style: none;
+  font-size: 16px;
+  line-height: 31px;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+.track-list:hover {
+  color: #75b7a1;
+}
+
+.track-list__active {
+  color: cyan;
+}
+
+.track-list__noplay {
+  color: rgb(116, 153, 153);
+}
+
+.track-list::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 4px;
+  width: 20px;
+  height: 20px;
+  background: url(../assets/svg/play.svg) center/ contain;
+}
+
+.track-list__active::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 4px;
+  width: 20px;
+  height: 20px;
+  background: url(../assets/svg/pause.svg) center/ contain;
 }
 
 .description-container {
